Добавить блок gallery

--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,12 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__button-edit/profile__button-edit.css);
 @import url(../blocks/profile/__speciality/profile__speciality.css);
-@import url(../blocks/profile/__button-add/profile__button-add.css)
+@import url(../blocks/profile/__button-add/profile__button-add.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__list/gallery__list.css);
+@import url(../blocks/gallery/__list-item/gallery__list-item.css);
+@import url(../blocks/gallery/__list-image/gallery__list-image.css);
+@import url(../blocks/gallery/__container/gallery__container.css);
+@import url(../blocks/gallery/__image-title/gallery__image-title.css);
+@import url(../blocks/gallery/__like/gallery__like.css);
+@import url(../blocks/gallery/__like/_active/gallery__like_active.css);
