--- a/pages/index.css
+++ b/pages/index.css
@@ -20,3 +20,5 @@
 @import url(../blocks/gallery/__image-title/gallery__image-title.css);
 @import url(../blocks/gallery/__like/gallery__like.css);
 @import url(../blocks/gallery/__like/_active/gallery__like_active.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__paragraph/footer__paragraph.css);
