--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -1,9 +1,11 @@
 .gallery__container {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0 30px 0 21px;
   max-width: 246px;
   width: 100%;
   height: 23px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
 }
