--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -1,11 +1,12 @@
 .gallery__container {
   margin: 0;
-  padding: 0 30px 0 21px;
+  padding: 25px 15px 31px 21px;
+  background-color: #FFFFFF;
   max-width: 246px;
   width: 100%;
   height: 23px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
+  border-radius: 0 0 10px 10px;
 }
