--- a/blocks/gallery/__list-image/gallery__list-image.css
+++ b/blocks/gallery/__list-image/gallery__list-image.css
@@ -1,8 +1,6 @@
 .gallery__list-image {
-  max-width: 282px;
-  width: 100%;
+  width: 282px;
   height: 282px;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
-  margin-bottom: 25px;
 }
