--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
-  margin: 0;
-  padding: 0 0 36.25px;
+  margin: 0 auto;
+  padding: 45px 0 36.25px;
+  max-width: 880px;
   width: 100%;
   max-height: 74px;
   position: relative;
@@ -10,7 +11,7 @@
   content: "";
   position: absolute;
   left: 0;
-  top: 0;
+  top: 45px;
   width: 100%;
   height: 73px;
   border-bottom: 1px solid #545454;
