--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -10,3 +10,9 @@
   align-items: center;
   border-radius: 0 0 10px 10px;
 }
+
+@media screen and (max-width: 910px) {
+  .gallery__container {
+    max-width: 246px;
+  }
+}
