--- a/blocks/footer/__paragraph/footer__paragraph.css
+++ b/blocks/footer/__paragraph/footer__paragraph.css
@@ -6,3 +6,23 @@
   line-height: 1.2;
   color: #545454;
 }
+
+@media screen and (max-width: 910px) {
+  .footer__paragraph {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .footer__paragraph {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .footer__paragraph {
+    margin: 0 0 36px;
+    font-size: 14px;
+    height: 14px;
+  }
+}
