--- a/blocks/gallery/__image-title/gallery__image-title.css
+++ b/blocks/gallery/__image-title/gallery__image-title.css
@@ -10,3 +10,15 @@
   overflow: hidden;
   max-width: 75%;
 }
+
+@media screen and (max-width: 910px) {
+  .gallery__image-title {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .gallery__image-title {
+    font-size: 24px;
+  }
+}
