--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -16,3 +16,19 @@
 .popup__close:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 540px) {
+  .popup__close {
+    right: 0;
+    top: -50px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .popup__close {
+    width: 20px;
+    height: 20px;
+    top: -36px;
+    padding: 0;
+  }
+}
