--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,3 +9,10 @@
   color: #000000;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
+
+@media screen and (max-width: 485px) {
+  .popup__input {
+    height: 14px;
+    padding: 0 0 12px;
+  }
+}
