--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,11 @@
   line-height: 1.2;
   color: #000000;
 }
+
+@media screen and (max-width: 485px) {
+  .popup__title {
+    font-size: 18px;
+    margin: 0 0 75px;
+    height: 22px;
+  }
+}
