--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -6,3 +6,20 @@
   border-radius: 50%;
   margin-right: 30px;
 }
+
+@media screen and (max-width: 910px) {
+  .profile__avatar {
+    width: 110px;
+    height: 110px;
+    margin-right: 25px;
+    background-position: center;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .profile__avatar {
+    width: 120px;
+    height: 120px;
+    margin-right: 0;
+  }
+}
