--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -15,3 +15,29 @@
 .profile__button-add:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 910px) {
+  .profile__button-add {
+    width: 120px;
+    height: 40px;
+    background-size: 19px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .profile__button-add {
+    width: 237.22px;
+    height: 50px;
+    background-size: 24px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .profile__button-add {
+    width: 100%;
+    padding: 0;
+    background-size: 16px;
+    margin-top: 36px;
+  }
+}
