--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -16,3 +16,23 @@
 .profile__button-edit:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 910px) {
+  .profile__button-edit {
+    background-size: 8px;
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .profile__button-edit {
+    width: 18px;
+    height: 18px;
+    background-size: 7.5px;
+    margin-right: 19px;
+    margin-top: 8px;
+    padding: 0;
+  }
+}
