--- a/blocks/profile/__speciality/profile__speciality.css
+++ b/blocks/profile/__speciality/profile__speciality.css
@@ -6,3 +6,18 @@
   line-height: 1.2;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 910px) {
+  .profile__speciality {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .profile__speciality {
+    grid-column: 1/3;
+    text-align: center;
+    font-size: 14px;
+    height: 14px;
+  }
+}
