--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,3 +7,24 @@
   max-width: 880px;
   width: 100%;
 }
+
+@media screen and (max-width: 910px) {
+  .profile {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .profile {
+    max-width: 400px;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .profile {
+    max-width: 282px;
+    height: 286px;
+    padding: 0 0 36px;
+  }
+}
