--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -4,7 +4,7 @@
   background-color: #FFFFFF;
   max-width: 246px;
   width: 100%;
-  height: 23px;
+  max-height: 23px;
   display: flex;
   justify-content: space-between;
   align-items: center;
