--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 485px) {
   .popup__input {
-    height: 14px;
+    max-height: 14px;
     padding: 0 0 12px;
   }
 }
