--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -2,7 +2,7 @@
   margin: 18px 0 0;
   padding: 0;
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   background-color: #000000;
   border: none;
   border-radius: 2px;
@@ -23,7 +23,7 @@
 @media screen and (max-width: 485px) {
   .popup__save {
     margin: 15px 0 0;
-    height: 46px;
+    min-height: 46px;
     font-size: 14px;
   }
 }
