--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,9 @@
   font-size: 42px;
   line-height: 1.1;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 910px) {
@@ -18,6 +21,5 @@
     font-size: 27px;
     line-height: 1.2;
     margin-left: 46px;
-    height: 26px;
   }
 }
