--- a/blocks/profile/__speciality/profile__speciality.css
+++ b/blocks/profile/__speciality/profile__speciality.css
@@ -5,6 +5,9 @@
   font-size: 18px;
   line-height: 1.2;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 910px) {
@@ -18,6 +21,5 @@
     grid-column: 1/3;
     text-align: center;
     font-size: 14px;
-    height: 14px;
   }
 }
