--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -41,7 +41,7 @@
 @media screen and (max-width: 485px) {
   .header {
     padding: 28px 0 69.85px;
-    max-width: 100%;
+    max-width: 485px;
     margin: 0;
     max-height: 56px;
     height: 100%;
