--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,11 +8,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 400px;
+  width: 100%;
 }
 
 @media screen and (max-width: 910px) {
   .profile__name {
     font-size: 28px;
+    max-width: 250px;
   }
 }
 
@@ -20,5 +23,6 @@
   .profile__name {
     font-size: 27px;
     line-height: 1.2;
+    max-width: 212px;
   }
 }
