--- a/blocks/profile/__speciality/profile__speciality.css
+++ b/blocks/profile/__speciality/profile__speciality.css
@@ -8,11 +8,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 400px;
+  width: 100%;
 }
 
 @media screen and (max-width: 910px) {
   .profile__speciality {
     font-size: 16px;
+    max-width: 250px;
   }
 }
 
@@ -20,5 +23,6 @@
   .profile__speciality {
     text-align: center;
     font-size: 14px;
+    max-width: 212px;
   }
 }
