--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -1,18 +1,12 @@
 .gallery__container {
   margin: 0;
-  padding: 25px 15px 31px 21px;
-  background-color: #FFFFFF;
+  padding: 0 15px 0 21px;
+  background-color: #FFF;
   max-width: 246px;
   width: 100%;
-  max-height: 23px;
+  min-height: 79px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 0 0 10px 10px;
-}
-
-@media screen and (max-width: 910px) {
-  .gallery__container {
-    max-width: 246px;
-  }
 }
