--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,10 @@
 .header {
   margin: 0 auto;
-  padding: 45px 0 36.25px;
+  padding-top: 45px;
+  padding-bottom: 36.25px;
   max-width: 880px;
   width: 100%;
-  max-height: 74px;
+  min-height: 74px;
   position: relative;
 }
 
@@ -13,7 +14,7 @@
   left: 0;
   top: 45px;
   width: 100%;
-  height: 73px;
+  min-height: 73px;
   border-bottom: 1px solid #545454;
   opacity: .7;
 }
@@ -22,32 +23,25 @@
   .header {
     max-width: 581px;
   }
-
-  .header::before {
-    top: 30px;
-  }
 }
 
 @media screen and (max-width: 610px) {
   .header {
     max-width: 400px;
   }
-
-  .header::before {
-    top: 30px;
-  }
 }
 
 @media screen and (max-width: 485px) {
   .header {
-    padding: 28px 0 69.85px;
-    max-width: 100%;
+    padding-top: 28px;
+    padding-bottom: 38.25px;
     margin: 0;
-    max-height: 56px;
-    height: 100%;
+    min-height: 56px;
+    max-width: 100%;
   }
 
   .header::before {
-    height: 55px;
+    min-height: 55px;
+    top: 27.6px;
   }
 }
