--- a/blocks/popup/__container-form/popup__container-form.css
+++ b/blocks/popup/__container-form/popup__container-form.css
@@ -3,7 +3,7 @@
   padding: 34px 36px 37px;
   max-width: 430px;
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   box-sizing: border-box;
