--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -3,7 +3,7 @@
   padding: 0;
   width: 100%;
   min-height: 50px;
-  background-color: #000000;
+  background-color: #000;
   border: none;
   border-radius: 2px;
   font-style: normal;
@@ -11,7 +11,7 @@
   font-size: 18px;
   line-height: 1.2;
   text-align: center;
-  color: #FFFFFF;
+  color: #FFF;
   cursor: pointer;
   transition: opacity .3s ease;
 }
