--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,25 +1,14 @@
 .profile__avatar {
-  background-image: url(../../../images/Avatar.svg);
-  background-repeat: no-repeat;
+  object-fit: contain;
+  object-position: center;
   width: 120px;
   height: 120px;
   border-radius: 50%;
   margin-right: 30px;
 }
 
-@media screen and (max-width: 910px) {
-  .profile__avatar {
-    width: 110px;
-    height: 110px;
-    margin-right: 25px;
-    background-position: center;
-  }
-}
-
 @media screen and (max-width: 610px) {
   .profile__avatar {
-    width: 120px;
-    height: 120px;
     margin-right: 0;
   }
 }
