--- a/blocks/profile/__speciality/profile__speciality.css
+++ b/blocks/profile/__speciality/profile__speciality.css
@@ -4,7 +4,8 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
-  color: #FFFFFF;
+  color: #FFF;
+  max-width: 400px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -13,13 +14,14 @@
 @media screen and (max-width: 910px) {
   .profile__speciality {
     font-size: 16px;
+    max-width: 250px;
   }
 }
 
 @media screen and (max-width: 485px) {
   .profile__speciality {
-    grid-column: 1/3;
     text-align: center;
     font-size: 14px;
+    max-width: 212px;
   }
 }
