--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save {
+.popup__button {
   margin: 18px 0 0;
   padding: 0;
   width: 100%;
@@ -16,12 +16,12 @@
   transition: opacity .3s ease;
 }
 
-.popup__save:hover {
+.popup__button:hover {
   opacity: .8;
 }
 
 @media screen and (max-width: 485px) {
-  .popup__save {
+  .popup__button {
     margin: 15px 0 0;
     min-height: 46px;
     font-size: 14px;
