refactor: добавить класс popupWithForm, UserInfo

--- a/src/blocks/gallery/__image/gallery__image.css
+++ b/src/blocks/gallery/__image/gallery__image.css
@@ -1,10 +1,10 @@
-.gallery__list-image {
+.gallery__image {
   width: 282px;
   height: 282px;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
 
-.gallery__list-image:hover {
+.gallery__image:hover {
   cursor: pointer;
 }
