--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,7 +1,5 @@
 .profile__avatar-container {
   position: relative;
-  width: 120px;
-  height: 120px;
   margin-right: 30px;
   cursor: pointer;
 }
@@ -13,9 +11,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition: background-color .3s ease;
+  background: center no-repeat url("../../../images/Edit-avatar.svg") rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  transition: opacity .3s ease;
 }
 
 .profile__avatar-container:hover::before {
-  background: center no-repeat url("../../../images/Edit-avatar.svg") rgba(0, 0, 0, 0.8);
+  opacity: 1;
 }
