--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,8 @@
 .profile__avatar {
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
-  width: 100%;
-  height: auto;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
 }
 
