--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 .content{margin:0;padding:0}
 .profile{align-items:center;display:flex;justify-content:space-between;margin:0 auto;max-width:880px;padding:0 0 51px;width:100%}@media screen and (max-width:910px){.profile{max-width:581px}}@media screen and (max-width:610px){.profile{flex-direction:column;max-width:400px}}@media screen and (max-width:485px){.profile{max-width:282px;padding:0 0 36px}}
 .profile__container{align-items:center;display:flex}@media screen and (max-width:610px){.profile__container{flex-direction:column;gap:20px}}@media screen and (max-width:485px){.profile__container{gap:26px;width:100%}}
-.profile__avatar{border-radius:50%;height:120px;margin-right:30px;-o-object-fit:contain;object-fit:contain;-o-object-position:center;object-position:center;width:120px}@media screen and (max-width:610px){.profile__avatar{margin-right:0}}
+.profile__avatar-container{cursor:pointer;margin-right:30px;position:relative}.profile__avatar-container:before{background:50% no-repeat url(ae1a976ddb506239e9f0.svg) rgba(0,0,0,.8);content:"";height:100%;left:0;opacity:0;position:absolute;top:0;transition:opacity .3s ease;width:100%}.profile__avatar-container:hover:before{opacity:1}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:120px}@media screen and (max-width:610px){.profile__avatar{margin-right:0}}
 .profile__info{-moz-column-gap:18px;column-gap:18px;display:grid;grid-template-columns:repeat(2,minmax(min-content,max-content));grid-template-rows:repeat(2,minmax(min-content,max-content));justify-content:center;row-gap:16px}@media screen and (max-width:485px){.profile__info{gap:14px 10px;justify-content:center;width:100%}}
 .profile__name{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:1.2;margin:0;max-width:400px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:100%}@media screen and (max-width:910px){.profile__name{font-size:27px;max-width:250px}}@media screen and (max-width:485px){.profile__name{max-width:212px}}
 .profile__button-edit{align-self:center;background-color:#000;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;background-size:10px;border:1px solid #fff;box-sizing:border-box;cursor:pointer;height:24px;margin-right:19px;padding:0;transition:opacity .3s ease;width:24px}.profile__button-edit:hover{opacity:.6}@media screen and (max-width:610px){.profile__button-edit{margin-right:0}}@media screen and (max-width:485px){.profile__button-edit{background-size:7.5px;height:18px;width:18px}}
@@ -19,6 +20,7 @@
 .gallery__image{border-radius:10px 10px 0 0;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}.gallery__image:hover{cursor:pointer}
 .gallery__container{align-items:center;background-color:#fff;border-radius:0 0 10px 10px;display:flex;justify-content:space-between;margin:0;max-width:246px;min-height:79px;padding:0 15px 0 21px;width:100%}
 .gallery__image-title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:1.2;margin:0;max-width:75%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.gallery__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:3px 0 0;text-align:center}
 .gallery__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);border:none;cursor:pointer;height:19px;padding:0;transition:opacity .3s ease;width:22px}.gallery__like:hover{opacity:.5}
 .gallery__like_active{background-image:url(35948469632d0421d697.svg)}
 .footer{margin:0 auto;max-width:880px;padding:0;width:100%}@media screen and (max-width:910px){.footer{max-width:581px}}@media screen and (max-width:610px){.footer{max-width:400px}}@media screen and (max-width:485px){.footer{max-width:282px}}
@@ -29,9 +31,12 @@
 .popup__container{position:relative}
 .popup__container_type_edit-profile{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;max-width:430px;padding:34px 36px 37px;width:100%}@media screen and (max-width:485px){.popup__container_type_edit-profile{max-width:282px;padding:25px 22px}}
 .popup__container_type_add-cards{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;max-width:430px;padding:34px 36px 37px;width:100%}@media screen and (max-width:485px){.popup__container_type_add-cards{max-width:282px;padding:25px 22px}}
+.popup__container_type_warning{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;max-width:430px;padding:34px 36px 37px;width:100%}@media screen and (max-width:485px){.popup__container_type_warning{max-width:282px;padding:25px 22px}}
+.popup__container_type_edit-avatar{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;max-width:430px;padding:34px 36px 37px;width:100%}@media screen and (max-width:485px){.popup__container_type_edit-avatar{max-width:282px;padding:25px 22px}}
 .popup__close{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:32px;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .3s ease;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:540px){.popup__close{right:0;top:-50px}}@media screen and (max-width:485px){.popup__close{height:20px;top:-36px;width:20px}}
 .popup__form{border:none;display:flex;flex-direction:column;margin:0;padding:0}
 .popup__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:1.2;margin:0 0 54px}@media screen and (max-width:485px){.popup__title{font-size:18px;margin:0 0 75px}}
+.popup__title_type_warning{margin-bottom:20px}
 .popup__input{border:none;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-size:14px;font-style:normal;font-weight:400;line-height:1.2;margin:0 0 35px;padding:0 0 12px}.popup__input::-moz-placeholder{color:#c4c4c4}.popup__input::placeholder{color:#c4c4c4}
 .popup__input_type_error{border-bottom:1px solid red;margin-bottom:5px}
 .popup__input-error{display:none}
